# babysit

./: Cargo.toml  README.md  README_JA.md  install.sh
.github/workflows/: release.yml
src/: agent.rs  cli.rs  control.rs  keys.rs  main.rs  pane.rs  paths.rs  run.rs  session.rs  sub.rs  tui.rs  upgrade.rs
