[package]
name = "babysit"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "fs", "time", "signal", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
nix = { version = "0.29", features = ["signal", "process"] }
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
strip-ansi-escapes = "0.2"
