[package]
name = "babysit"
version = "0.1.1"
edition = "2024"
description = "Run a shell command in a TUI alongside an AI agent (Claude / Codex) that can observe and operate it"
license = "MIT"
repository = "https://github.com/yusukeshib/babysit"
readme = "README.md"
keywords = ["tui", "ai", "agent", "pty", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "fs", "time", "signal", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
nix = { version = "0.29", features = ["signal", "process"] }
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
strip-ansi-escapes = "0.2"
